margin collapse solved

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -20,7 +20,7 @@ body {
 
 .content {
   background: #e3f4ff;
-  margin: 18px auto;
+ margin-bottom: 20px;
   padding: 20px;
  
 
@@ -29,6 +29,7 @@ body {
 .button-container {
   background: #e3f4ff;
   text-align: center;
+  padding: 8px;
 }
 
 button {
@@ -36,5 +37,5 @@ button {
   border: 1px solid #eee;
   display: block;
   margin: 8px auto;
-  
+  padding: 8px 18px;
 }
